--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "idb": "^7.1.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
